...
        <View style={styles.copy}>
          <View style={styles.brand}>
            <Logo width={33} height={33} />
            <Text style={styles.brandText}>One Plan</Text>
          </View>
          <Text style={styles.title}>
            {t(verification ? 'Your plan is being verified' : 'Welcome to Market')}
          </Text>
          <Text style={styles.body}>
            {t(
              verification
                ? "We will send you a notification via the email address you used to register your account when the Plan verification process is complete. Let's make it!"
                : 'From now on, you no longer need to spend hours researching travel and dining itineraries. You can buy and use the plan that best suits you for a very small fee.',
...
