...
              title={t('Add to Boards')}
              disabled={!pins.length}
              onPress={() => setSave('board')}
            />
            <BoardButton
              style={{ flex: 1, paddingHorizontal: 10 }}
              title={t('Add to Trips')}
              disabled={!pins.length}
              onPress={() => setSave('trip')}
            />
          </Animated.View>
        ) : null}
      </View>
...
